crates/diskuse/tests/snapshots/denied_one@linux-d4096-s0.snap
---
source: tests/browse.rs
---
/one  8.0 KiB | 1 folder unreadable (d) | scanned 0 s ago
1 directory could not be read, so its contents are not counted:
/tmp/du-XXXXXX/locked  permission denied (try sudo)
















arrows/jk scroll  d close  ? help  q quit
--- styles ---
 0   6..13  BOLD
 0  13..16  DarkGray
 0  39..42  DarkGray
 2  23..51  Red
19   0..9   Cyan BOLD
19  18..19  Cyan BOLD
19  27..28  Cyan BOLD
19  35..36  Cyan BOLD
