crates/diskuse/tests/snapshots/filter_matches_nothing@macos-d0-s0.snap
---
source: tests/browse.rs
---
/fixture  1.5 MiB | 2 folders unreadable (d)
no matches for 'zz'

















/zz  enter keep  esc clear
--- styles ---
 0  10..17  BOLD
 0  17..20  DarkGray
 1   0..19  DarkGray
19   0..3   Cyan BOLD
19   5..10  Cyan BOLD
19  17..20  Cyan BOLD
